# halo2

./: .gitconfig-emir  .gitignore  Cargo.toml  README.md  help.html  rust-toolchain  search-index.js  settings.html  src-files.js  typos.toml
halo2_proofs/: CHANGELOG.md  Cargo.toml  all.html  enum.SerdeFormat.html  index.html
halo2_proofs/arithmetic/: fn.best_fft.html  fn.best_multiexp.html  fn.compute_inner_product.html  fn.eval_polynomial.html  fn.g_to_lagrange.html  fn.kate_division.html  fn.lagrange_interpolate.html  fn.parallelize.html  fn.recursive_butterfly_arithmetic.html  fn.small_multiexp.html  index.html  trait.CurveAffine.html  trait.CurveExt.html  trait.FftGroup.html  trait.Field.html
halo2_proofs/benches/: arithmetic.rs  commit_zk.rs  fft.rs  lookups.rs  plonk.rs  polyread.rs
halo2_proofs/circuit/: index.html  sidebar-items.js  struct.AssignedCell.html  struct.Cell.html  struct.NamespacedLayouter.html  struct.Region.html  struct.RegionIndex.html  struct.RegionStart.html  struct.SimpleFloorPlanner.html  struct.SimpleTableLayouter.html  struct.Table.html  struct.Value.html  trait.Chip.html  trait.Layouter.html  trait.TableLayouter.html
halo2_proofs/circuit/floor_planner/: index.html  struct.V1.html  struct.V1Pass.html
halo2_proofs/circuit/layouter/: enum.RegionColumn.html  index.html  sidebar-items.js  struct.RegionShape.html  trait.RegionLayouter.html  trait.SyncDeps.html  trait.TableLayouter.html
halo2_proofs/circuit/table_layouter/: struct.SimpleTableLayouter.html
halo2_proofs/dev/: enum.CellValue.html  enum.FailureLocation.html  enum.VerifyFailure.html  fn.circuit_dot_graph.html  index.html  sidebar-items.js  struct.CircuitGates.html  struct.CircuitLayout.html  struct.MockProver.html  struct.TracingFloorPlanner.html
halo2_proofs/dev/cost/: index.html  struct.CircuitCost.html  struct.MarginalProofSize.html  struct.ProofSize.html
halo2_proofs/dev/metadata/: index.html  struct.Column.html  struct.Constraint.html  struct.Gate.html  struct.Region.html  struct.VirtualCell.html
halo2_proofs/examples/: circuit-cost.rs  cost-model.rs  serialization.rs  shuffle.rs  shuffle_api.rs  simple-lookup-unblinded.rs  simple-lookup.rs  vector-mul-unblinded.rs  vector-mul.rs  vector-ops-unblinded.rs
halo2_proofs/plonk/: enum.Any.html  enum.Assigned.html  enum.Error.html  enum.Expression.html  enum.TableError.html  fn.create_proof.html  fn.keygen_pk.html  fn.keygen_vk.html  fn.verify_proof.html  index.html  sidebar-items.js  struct.Advice.html  struct.AdviceQuery.html  struct.BatchVerifier.html  struct.Challenge.html  struct.Column.html  struct.Constraint.html  struct.ConstraintSystem.html  struct.Constraints.html  struct.FirstPhase.html  struct.Fixed.html  struct.FixedQuery.html  struct.Gate.html  struct.Instance.html  struct.InstanceQuery.html  struct.LookupTracker.html  struct.PinnedConstraintSystem.html  struct.PinnedVerificationKey.html  struct.ProvingKey.html  struct.SecondPhase.html  struct.Selector.html  struct.TableColumn.html  struct.ThirdPhase.html  struct.VerifyingKey.html  struct.VirtualCell.html  struct.VirtualCells.html  trait.Assignment.html  trait.Circuit.html  trait.ColumnType.html  trait.FloorPlanner.html  (+1 more)
halo2_proofs/plonk/circuit/: struct.LookupTracker.html
halo2_proofs/plonk/permutation/: index.html  struct.Argument.html  struct.Assembly.html  struct.VerifyingKey.html
halo2_proofs/poly/: enum.Error.html  index.html  struct.Coeff.html  struct.EvaluationDomain.html  struct.ExtendedLagrangeCoeff.html  struct.LagrangeCoeff.html  struct.PinnedEvaluationDomain.html  struct.Polynomial.html  struct.ProverQuery.html  struct.Rotation.html  struct.VerifierQuery.html  trait.Basis.html  trait.Guard.html  trait.VerificationStrategy.html
halo2_proofs/poly/commitment/: index.html  struct.Blind.html  trait.CommitmentScheme.html  trait.MSM.html  trait.Params.html  trait.ParamsProver.html  trait.ParamsVerifier.html  trait.Prover.html  trait.Verifier.html
halo2_proofs/poly/ipa/: index.html
halo2_proofs/poly/ipa/commitment/: fn.create_proof.html  fn.verify_proof.html  index.html  struct.IPACommitmentScheme.html  struct.ParamsIPA.html  type.ParamsVerifierIPA.html
halo2_proofs/poly/ipa/msm/: index.html  struct.MSMIPA.html
halo2_proofs/poly/ipa/multiopen/: index.html  struct.ProverIPA.html  struct.VerifierIPA.html
halo2_proofs/poly/ipa/strategy/: index.html  struct.Accumulator.html  struct.AccumulatorStrategy.html  struct.GuardIPA.html  struct.SingleStrategy.html
halo2_proofs/poly/kzg/: index.html
halo2_proofs/poly/kzg/commitment/: index.html  struct.KZGCommitmentScheme.html  struct.ParamsKZG.html  type.ParamsVerifierKZG.html
halo2_proofs/poly/kzg/msm/: index.html  struct.DualMSM.html  struct.MSMKZG.html
halo2_proofs/poly/kzg/multiopen/: index.html  struct.ProverGWC.html  struct.ProverSHPLONK.html  struct.VerifierGWC.html  struct.VerifierSHPLONK.html
halo2_proofs/poly/kzg/strategy/: index.html  struct.AccumulatorStrategy.html  struct.GuardKZG.html  struct.SingleStrategy.html
halo2_proofs/src/: arithmetic.rs  dev.rs  fft.rs  helpers.rs  icicle.rs  icicle_helper.rs  lib.rs  multicore.rs  plonk.rs  poly.rs
halo2_proofs/src/circuit/: layouter.rs  table_layouter.rs
halo2_proofs/src/circuit/floor_planner/: single_pass.rs  v1.rs
halo2_proofs/src/dev/: cost.rs  cost_model.rs  failure.rs  metadata.rs
halo2_proofs/src/fft/: baseline.rs  parallel.rs  recursive.rs
halo2_proofs/src/plonk/: circuit.rs  evaluation.rs  keygen.rs  mv_lookup.rs  prover.rs  verifier.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs
halo2_proofs/tests/: compress_selectors.rs  frontend_backend_split.rs  plonk_api.rs  serialization.rs  shuffle.rs  shuffle_api.rs  vector-ops-unblinded.rs
halo2_proofs/transcript/: index.html  struct.Blake2bRead.html  struct.Blake2bWrite.html  struct.Challenge255.html  struct.ChallengeScalar.html  struct.Keccak256Read.html  struct.Keccak256Write.html  trait.EncodedChallenge.html  trait.Transcript.html  trait.TranscriptRead.html  trait.TranscriptReadBuffer.html  trait.TranscriptWrite.html  trait.TranscriptWriterBuffer.html
(+398 files in other folders)
